--- a/assets/css/edvininpolku.css
+++ b/assets/css/edvininpolku.css
@@ -1,6 +1,24 @@
-canvas {
+table {
   width: 100%;
-  height: 300px;
+  height: 700px;
 }
 
-#map { height: 300px; }
+tr {
+  width: 100%;
+  height: 100%
+}
+
+td {
+  width: 50%;
+  height: 100%
+}
+
+#canvas {
+  max-width: 100%;
+  max-height: 700px;
+}
+
+#map {
+  height: 100%;
+  width: 100%;
+}
