--- a/assets/css/edvininpolku.css
+++ b/assets/css/edvininpolku.css
@@ -1,24 +1,66 @@
-table {
-  width: 100%;
-  height: 700px;
-}
-
-tr {
-  width: 100%;
-  height: 100%
-}
-
-td {
-  width: 50%;
-  height: 100%
-}
-
-#canvas {
-  max-width: 100%;
-  max-height: 700px;
-}
-
 #map {
-  height: 100%;
+  height: 50vh;
   width: 100%;
+}
+
+.header {
+  margin-bottom: 15px
+}
+
+.article {
+  display: flex;
+  justify-content: space-between;
+}
+
+.collection {
+  display: flex;
+  flex-direction: column;
+  width: 65%;
+}
+
+.header,
+.sculpture,
+.sidebar {
+  padding: 15px;
+  background-color: rgb(241, 224, 197);
+}
+
+.sculpture {
+  margin-bottom: 15px;
+}
+
+.sculpture:last-child {
+  margin-bottom: 0px;
+}
+
+img {
+  display: block;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.sidebar-container {
+  height: 100%;
+  position: sticky;
+  top: 15px;
+  display: flex;
+  flex-direction: column;
+  width: 33%;
+  padding-right: 30px;
+}
+
+.sidebar {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.sidebar:last-child {
+  margin-bottom: 0px;
+}
+
+body {
+  background-color: rgb(201, 183, 156);
+  font-family: sans-serif;
+  padding: 10px;
 }
