--- a/assets/css/edvininpolku.css
+++ b/assets/css/edvininpolku.css
@@ -65,3 +65,28 @@ body {
   font-family: sans-serif;
   padding: 10px;
 }
+
+#progress-bar {
+ width: 100%;
+ border-radius: 15px;
+ background-color: #eee;
+ position: relative;
+}
+
+#progress-text {
+ position: absolute;
+ top: 20%;
+ text-align: center;
+ width: 100%;
+}
+
+#progress-graphic {
+ height: 30px;
+ border-radius: 15px;
+ background: linear-gradient(to right, rgba(33, 177, 89, .5), rgba(33, 177, 89, 1));
+ width: 0%;
+}
+
+#sidebar-progress-bar {
+  transition: opacity 1s ease-in-out
+}
